# sentinel-app-2

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PR_ANALYSIS.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/engine/: .coverage  .dockerignore  Dockerfile  README.md  pyproject.toml
apps/engine/src/: config.py  db.py  errors.py  logging_config.py
apps/engine/src/api/: deps.py  main.py  validators.py
apps/engine/src/api/routes/: __init__.py  audit.py  (+10 more)
apps/engine/src/backtest/: engine.py  monte_carlo.py  optimizer.py  walk_forward.py
apps/engine/src/compliance/: __init__.py  audit_logger.py
apps/engine/src/data/: __init__.py  alpaca_ws.py  earnings_client.py  ingestion.py  news_client.py  polygon_client.py  price_cache.py
apps/engine/src/events/: __init__.py  redis_bus.py
apps/engine/src/execution/: __init__.py  algo_executor.py  alpaca_broker.py  broker_interface.py  order_store.py  paper_broker.py  twap.py  vwap.py
apps/engine/src/middleware/: __init__.py  rate_limit.py  tracing.py
apps/engine/src/risk/: pdt_tracker.py  portfolio_optimizer.py  position_sizer.py  risk_manager.py  wash_sale.py
apps/engine/src/strategies/: __init__.py  base.py  composite.py  indicators.py  mean_reversion.py  momentum.py  pairs_trading.py  registry.py  signal_generator.py  trend_following.py  value.py
apps/engine/tests/: conftest.py
apps/engine/tests/integration/: conftest.py  test_backtest_integration.py  test_data_integration.py  test_health_integration.py  test_portfolio_integration.py  test_risk_integration.py  test_strategies_integration.py
apps/engine/tests/unit/: test_algo_executor.py  test_alpaca_broker.py  test_api_key_middleware.py  test_audit_routes.py  test_backtest.py  test_calendar_routes.py  test_config.py  test_data_routes.py  test_earnings_client.py  test_error_handler.py  test_health.py  test_indicators.py  test_ingestion.py  test_monte_carlo.py  test_news_client.py  test_news_routes.py  test_optimizer.py  test_order_store.py  test_orders_routes.py  test_paper_broker.py  test_pdt_tracker.py  test_polygon_client.py  test_portfolio_optimizer.py  test_portfolio_routes.py  test_price_cache.py  test_rate_limit.py  test_redis_bus.py  test_risk.py  test_strategies.py  test_strategy_routes.py  test_stream_routes.py  test_twap.py  test_validators.py  test_vwap.py  test_walk_forward.py  test_wash_sale.py
(+154 files in other folders)
